# Andromeda

./: .gitignore  .travis.yml  Andromeda.cabal  ParameterTest.hs  README.md  andromeda.cabal  package.yaml  run.sh  stack.yaml
app/: Main.hs  SimulatorRuntime.hs  ViewModels.hs
app/Assets/: SpaceshipSample.hs
app/ViewModels/: DeviceComponentViewModel.hs  DeviceViewModel.hs  ShellViewModel.hs  WorkspaceViewModel.hs
app/Views/: DeviceComponentItemView.qml  DeviceItemView.qml  NetworkWorkspaceView.qml  ShellView.qml  SimulatorWorkspaceView.qml
docs/Requirements/: Andromeda Control Software.mm  Control Environment.mm  Logic Control.mm  SCADA.mm  Simulator.mm
lib/: Lib.hs
lib/Control/Arrow/: ArrEff.hs  Reactive.hs
lib/Control/Service/: Remote.hs
src/: Andromeda.hs
src/Andromeda/: Assets.hs  Calculations.hs  Common.hs  Hardware.hs  Language.hs  LogicControl.hs  Simulator.hs
src/Andromeda/Assets/: SpaceshipSample.hs
src/Andromeda/Assets/Hardware/: .Components.hs.swp  BoostersB12.hs  Components.hs  Devices.hs
src/Andromeda/Calculations/: Measurements.hs  Measurments.hs
src/Andromeda/Calculations/Physics/: Units.hs
src/Andromeda/Common/: Assert.hs  Exists.hs  Guid.hs  Parsing.hs  Types.hs  Untag.hs  Value.hs
src/Andromeda/Environment/: Language.hs
src/Andromeda/HAL/: Interpreter.hs  Language.hs
src/Andromeda/Hardware/: .Device.hs.swp  Description.hs  Descriptor.hs  Device.hs  HDL.hs  HNDL.hs  Handle.hs  Hardware.hs  HardwareIO.hs  Interpreter.hs  Language.hs  Network.hs  Parameter.hs  Runtime.hs  Scheme.hs  Types.hs
src/Andromeda/Language/: LogicControl.hs
src/Andromeda/Language/LogicControl/: AST.hs  Interpreter.hs  Parser.hs  Translator.hs
src/Andromeda/LogicControl/: Interpreter.hs  Language.hs  Runtime.hs
src/Andromeda/LogicControl/Language/: Computation.hs  Control.hs  ControlFlow.hs  Controller.hs  Infrastructure.hs  Script.hs
src/Andromeda/Model/: Runtime.hs
src/Andromeda/Model/HAL/: Interpreter.hs
src/Andromeda/Simulator/: Actions.hs  Facade.hs  Language.hs  Runtime.hs  Simulation.hs  SimulationCompiler.hs  SimulationModel.hs  Simulator.hs  Types.hs  ValueGenerators.hs
src/Andromeda/Simulator/Internal/: SimulationCompiler.hs
src/Andromeda/System/: Language.hs
src/Andromeda/Types/: Hardware.hs  Physics.hs  UI.hs
src/Andromeda/Types/Common/: Guid.hs  Value.hs
src/Andromeda/Types/Hardware/: Component.hs  Device.hs  Handle.hs  Parameter.hs  Types.hs
src/Andromeda/Types/Language/: ControlFlow.hs  Hardware.hs  Scripting.hs
src/Andromeda/Types/Language/ControlFlow/: ControlFlow.hs
src/Andromeda/Types/Language/Hardware/: HDL.hs  HNDL.hs
src/Andromeda/Types/Language/Scripting/: ComputationScript.hs  ControlProgram.hs  ControllerScript.hs  InfrastructureScript.hs  ScriptWrapper.hs
src/Andromeda/Types/Physics/: Measurement.hs  Temperature.hs
src/Andromeda/Types/UI/: GraphTransition.hs
src/Andromeda/Utils/: Assert.hs  DebugPrint.hs  Parsing.hs
test/: .TestCommon.hs.swp  ArrowsTest.hs  BoostersHeatUpTest.hs  Common.hs  ControlProgramSpec.hs  ControllerScriptSpec.hs  ControllerTest.hs  FreeArrowSpec.hs  FreeIOArrowsTest.hs  HardwareDescriptorsTest.hs  HardwareNetworkTest.hs  HardwareSpec.hs  ParameterTagTest.hs  ParsingTest.hs  ReactiveArrowsTest.hs  SimulatorTest.hs  Spec.hs  TestCommon.hs  TranslationTest.hs
test/Data/: complex_script1.txt  controller_script.txt  controller_script1.txt  controller_script_simple1.txt
test/LogicControl/: Test.hs  reqs.txt
test/Runtime/Hardware/: Device.hs
test/Simulator/: AutomationTest.hs  ControllerScriptRunSpec.hs  InitializationTest.hs  SimulationSpec.hs  SimulationTest.hs  TestCommon.hs
test/Test/: Common.hs  ControlProgramSpec.hs  ControllerScriptSpec.hs  FreeArrowSpec.hs  HardwareSpec.hs
test/Test/Simulator/: ControllerScriptRunSpec.hs  SimulationSpec.hs
test/Test/UI/: GraphTransitionSpec.hs
test/Test/Utils/: Untag.hs
trash/: Language.hs  ParsingTest.hs  Script.hs  TestCommon.hs  TranslationTest.hs
