name:                Andromeda
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/Andromeda#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Andromeda,
                       Andromeda.Common,
                       Andromeda.Common.Value,
                       Andromeda.Common.Untag,
                       Andromeda.Simulator,
                       Andromeda.Simulator.Facade,
                       Andromeda.Simulator.Language,
                       Andromeda.Hardware,
                       Andromeda.Hardware.HDL,
                       Andromeda.Hardware.Description,
                       Andromeda.Hardware.Parameter,
                       Andromeda.Hardware.Network,
                       Andromeda.Calculations,
                       Andromeda.Calculations.Measurments,
                       Andromeda.Calculations.Physics.Units,
                       Andromeda.LogicControl,
                       Andromeda.LogicControl.Language,
                       Andromeda.LogicControl.Runtime,
                       Andromeda.LogicControl.Interpreter,
                       Andromeda.Assets,
                       Andromeda.Assets.Hardware.Devices
                       
  build-depends:       base >= 4.7 && < 5,
                       vector,
                       containers,
                       bytestring,
                       free,
                       mtl,
                       transformers,
                       arrows,
                       lens,
                       Stream,
                       stm
                       
  default-language:    Haskell2010

executable Andromeda-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Andromeda
  default-language:    Haskell2010

test-suite Andromeda-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5,
                       vector,
                       containers,
                       bytestring,
                       free,
                       mtl,
                       transformers,
                       arrows,
                       lens,
                       Stream,
                       stm,
                       Andromeda
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Andromeda
