name:                Andromeda
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/Andromeda#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src,
                       lib
  exposed-modules:     Control.Arrow.ArrEff
                      , Control.Arrow.Reactive
                      , Control.Service.Remote
                       
                      , Lib     
                      , Andromeda
                       
                      , Andromeda.Common
                      , Andromeda.Common.Assert
                      , Andromeda.Common.Value
                      , Andromeda.Common.Untag
                      , Andromeda.Common.Parsing
                      , Andromeda.Common.Guid
                       
                      , Andromeda.Simulator
                      , Andromeda.Simulator.Simulation
                      , Andromeda.Simulator.SimulationModel
                      , Andromeda.Simulator.Actions
                       
                      , Andromeda.Hardware
                      , Andromeda.Hardware.Types
                      , Andromeda.Hardware.HDL
                      , Andromeda.Hardware.HNDL
                      , Andromeda.Hardware.Description
                      , Andromeda.Hardware.Parameter
                      , Andromeda.Hardware.Device
                      , Andromeda.Hardware.Runtime
                       
                      , Andromeda.Calculations
                      , Andromeda.Calculations.Measurements
                      , Andromeda.Calculations.Physics.Units
                       
                      , Andromeda.LogicControl
                      , Andromeda.LogicControl.Language.Controller
                      , Andromeda.LogicControl.Language.Computation
                      , Andromeda.LogicControl.Language.Infrastructure
                      , Andromeda.LogicControl.Language.Control
                      , Andromeda.LogicControl.Language.Script
                      , Andromeda.LogicControl.Language.ControlFlow
                       
                      , Andromeda.Language
                      , Andromeda.Language.External.LogicControl.Parser
                      , Andromeda.Language.External.LogicControl.AST
                      , Andromeda.Language.External.LogicControl.Translator
                      , Andromeda.Language.External.LogicControl.Interpreter
                       
                      , Andromeda.Assets
                       
  build-depends:       base >= 4.7 && < 5,
                       vector,
                       containers,
                       bytestring,
                       free,
                       mtl,
                       transformers,
                       arrows,
                       lens,
                       Stream,
                       stm,
                       clock >= 0.7.2,
                       parsec
                       
  default-language:    Haskell2010

executable Andromeda-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Andromeda
  default-language:    Haskell2010

test-suite Andromeda-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5,
                       hspec,
                       vector,
                       containers,
                       bytestring,
                       free,
                       mtl,
                       transformers,
                       arrows,
                       lens,
                       Stream,
                       stm,
                       clock >= 0.7.2,
                       parsec,
                       Andromeda
  other-modules:       TestCommon,
                       ControlProgramSpec,
                       ControllerScriptSpec,
                       FreeArrowSpec,
                       HardwareSpec,
                       ParsingTest,
                       TranslationTest,
                       Simulator.SimulationSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Andromeda
