name:                Andromeda
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/Andromeda#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Granin
maintainer:          graninas@gmail.com
copyright:           2017 Alexander Granin
category:            Educationauthor:              Author name here
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src,
                       lib
  exposed-modules:
      Lib
    , Control.Arrow.ArrEff
    , Control.Arrow.Reactive
    , Control.Service.Remote

    , Andromeda.Language.LogicControl
    , Andromeda.Language.LogicControl.AST
    , Andromeda.Language.LogicControl.Interpreter
    , Andromeda.Language.LogicControl.Parser
    , Andromeda.Language.LogicControl.Translator

    , Andromeda.Simulator
    , Andromeda.Simulator.Internal.SimulationCompiler
    , Andromeda.Simulator.Types
    , Andromeda.Simulator.Actions
    , Andromeda.Simulator.Runtime

    , Andromeda.Types.Common.Guid
    , Andromeda.Types.Common.Value

    , Andromeda.Types.Hardware
    , Andromeda.Types.Hardware.Types
    , Andromeda.Types.Hardware.Component
    , Andromeda.Types.Hardware.Device
    , Andromeda.Types.Hardware.Handle
    , Andromeda.Types.Hardware.Parameter

    , Andromeda.Types.Language.ControlFlow
    , Andromeda.Types.Language.ControlFlow.ControlFlow

    , Andromeda.Types.Language.Hardware
    , Andromeda.Types.Language.Hardware.HDL
    , Andromeda.Types.Language.Hardware.HNDL

    , Andromeda.Types.Language.Scripting
    , Andromeda.Types.Language.Scripting.ComputationScript
    , Andromeda.Types.Language.Scripting.ControllerScript
    , Andromeda.Types.Language.Scripting.InfrastructureScript
    , Andromeda.Types.Language.Scripting.ScriptWrapper
    , Andromeda.Types.Language.Scripting.ControlProgram

    , Andromeda.Types.Physics
    , Andromeda.Types.Physics.Measurement
    , Andromeda.Types.Physics.Temperature

    , Andromeda.Types.UI
    , Andromeda.Types.UI.GraphTransition

    , Andromeda.Utils.Assert
    , Andromeda.Utils.Parsing

  build-depends:       base >= 4.7 && < 5,
                       vector,
                       containers,
                       bytestring,
                       free,
                       mtl,
                       transformers,
                       arrows,
                       lens,
                       Stream,
                       stm,
                       clock >= 0.7.2,
                       parsec

  default-language:    Haskell2010

executable Andromeda-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Andromeda
                     , hsqml
                     , directory
                     , text
  other-modules:      Assets.SpaceshipSample
                    , ViewModels
                    , ViewModels.DeviceComponentViewModel
                    , ViewModels.DeviceViewModel
                    , ViewModels.WorkspaceViewModel
                    , ViewModels.ShellViewModel
  default-language:    Haskell2010

test-suite Andromeda-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5,
                       hspec,
                       vector,
                       containers,
                       bytestring,
                       free,
                       mtl,
                       transformers,
                       arrows,
                       lens,
                       Stream,
                       stm,
                       clock >= 0.7.2,
                       parsec,
                       Andromeda
  other-modules:
      Test.Common
    , Test.ControlProgramSpec
    , Test.ControllerScriptSpec
    , Test.FreeArrowSpec
    , Test.HardwareSpec
    , Test.Simulator.SimulationSpec
    , Test.Simulator.ControllerScriptRunSpec
    , Test.UI.GraphTransitionSpec

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Andromeda
